feat: crear array de 5 ceros con np.zeros y luego reemplazar el tercer elemento por el número 5

--- a/tp4.ipynb
+++ b/tp4.ipynb
@@ -64,7 +64,7 @@
     "#todo: \n",
     "import numpy as np\n",
     "\n",
-    "array = np.arange(10)\n",
+    "array = np.arange(10) #Crea un array con 10 elementos usando np.arange\n",
     "print(array)"
    ]
   },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b9cd04a0",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ARRAY DE CEROS\n",
       "[0 0 0 0 0]\n",
+      "ARRAY DE CEROS CON VALOR 5 EN EL TERCER ELEMENTO\n",
       "[0 0 5 0 0]\n"
      ]
     }
@@ -95,9 +97,12 @@
     "#todo:\n",
     "import numpy as np\n",
     "\n",
-    "array_ceros = np.zeros(5, dtype=int)\n",
+    "array_ceros = np.zeros(5, dtype=int) #Crea un array de 5 ceros usando np.zeros\n",
+    "print(\"ARRAY DE CEROS\")\n",
     "print(array_ceros)\n",
-    "array_ceros[2] = 5\n",
+    "\n",
+    "array_ceros[2] = 5 #Asigna el valor 5 al indice 2 (elemento 3) del array de ceros\n",
+    "print(\"ARRAY DE CEROS CON VALOR 5 EN EL TERCER ELEMENTO\")\n",
     "print(array_ceros)"
    ]
   },
