feat: crear una matriz 3x3 usando números aleatorios entre 0 y 1

--- a/tp4.ipynb
+++ b/tp4.ipynb
@@ -116,12 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "e74354c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MATRIZ ALEATORIA DE 3x3\n",
+      "[[0 1 1]\n",
+      " [0 1 1]\n",
+      " [1 0 1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#todo: "
+    "#todo: \n",
+    "import numpy as np\n",
+    "\n",
+    "matriz = np.random.randint(0, 2, size=(3, 3)) #Crea una matriz de 3x3 con valores aleatorios entre 0 y 1 usando np.random.randint\n",
+    "print(\"MATRIZ ALEATORIA DE 3x3\")\n",
+    "print(matriz)\n"
    ]
   },
   {
