feat: sumar 5 a cada elemento del array dado y multiplicar cada elemento por un número aleatorio

--- a/tp4.ipynb
+++ b/tp4.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "75029034",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,6 @@
    ],
    "source": [
     "#todo: \n",
-    "import numpy as np\n",
     "\n",
     "array = np.arange(10) #Crea un array con 10 elementos usando np.arange\n",
     "print(array)"
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b9cd04a0",
    "metadata": {},
    "outputs": [
@@ -86,23 +85,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "ARRAY DE CEROS\n",
+      "\n",
       "[0 0 0 0 0]\n",
+      "\n",
       "ARRAY DE CEROS CON VALOR 5 EN EL TERCER ELEMENTO\n",
+      "\n",
       "[0 0 5 0 0]\n"
      ]
     }
    ],
    "source": [
     "#todo:\n",
-    "import numpy as np\n",
-    "\n",
     "array_ceros = np.zeros(5, dtype=int) #Crea un array de 5 ceros usando np.zeros\n",
-    "print(\"ARRAY DE CEROS\")\n",
+    "print(\"\\nARRAY DE CEROS\\n\")\n",
     "print(array_ceros)\n",
     "\n",
     "array_ceros[2] = 5 #Asigna el valor 5 al indice 2 (elemento 3) del array de ceros\n",
-    "print(\"ARRAY DE CEROS CON VALOR 5 EN EL TERCER ELEMENTO\")\n",
+    "print(\"\\nARRAY DE CEROS CON VALOR 5 EN EL TERCER ELEMENTO\\n\")\n",
     "print(array_ceros)"
    ]
   },
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "e74354c9",
    "metadata": {},
    "outputs": [
@@ -133,10 +134,9 @@
    ],
    "source": [
     "#todo: \n",
-    "import numpy as np\n",
     "\n",
     "matriz = np.random.randint(0, 2, size=(3, 3)) #Crea una matriz de 3x3 con valores aleatorios entre 0 y 1 usando np.random.randint\n",
-    "print(\"MATRIZ ALEATORIA DE 3x3\")\n",
+    "print(\"\\nMATRIZ ALEATORIA DE 3x3\\n\")\n",
     "print(matriz)\n"
    ]
   },
@@ -152,12 +152,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "ed416e11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ARRAY ORIGINAL\n",
+      "\n",
+      "[10 20 30 40 50]\n",
+      "\n",
+      "+5 A CADA ELEMENTO\n",
+      "\n",
+      "[15 25 35 45 55]\n",
+      "\n",
+      "NUMERO ALEATORIO: 2\n",
+      "\n",
+      "MULTIPLICACIÓN POR EL NÚMERO ALEATORIO\n",
+      "\n",
+      "[ 20  40  60  80 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "#todo:"
+    "#todo:\n",
+    "\n",
+    "arr = np.array([10, 20, 30, 40, 50]) #Crea un array con 5 elementos usando np.array\n",
+    "print(\"\\nARRAY ORIGINAL\\n\")\n",
+    "print(arr)\n",
+    "\n",
+    "print(\"\\n+5 A CADA ELEMENTO\\n\")\n",
+    "print(arr + 5) #Suma 5 a cada elemento del array\n",
+    "\n",
+    "random_num = randint(1, 10) #Genera un número aleatorio entre 1 y 10\n",
+    "print(f\"\\nNUMERO ALEATORIO: {random_num}\\n\")\n",
+    "\n",
+    "arr_producto = arr * random_num #Multiplica cada elemento del array por el número aleatorio\n",
+    "print(\"MULTIPLICACIÓN POR EL NÚMERO ALEATORIO\\n\")\n",
+    "print(arr_producto) #Imprime el array resultante"
    ]
   },
   {
