feat: crear matriz de identidad 4x4

--- a/tp4.ipynb
+++ b/tp4.ipynb
@@ -205,12 +205,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "6811c19f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "MATRIZ IDENTIDAD DE 4x4\n",
+      "\n",
+      "[[1 0 0 0]\n",
+      " [0 1 0 0]\n",
+      " [0 0 1 0]\n",
+      " [0 0 0 1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#todo:"
+    "#todo:\n",
+    "matriz_identidad = np.eye(4, dtype=int) #Crea una matriz identidad de 4x4 usando np.eye\n",
+    "print(\"\\nMATRIZ IDENTIDAD DE 4x4\\n\")\n",
+    "print(matriz_identidad)"
    ]
   },
   {
@@ -223,13 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "f0c02872",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ARRAY DE PARES ENTRE 0 Y 20\n",
+      "\n",
+      "[ 0  2  4  6  8 10 12 14 16 18]\n"
+     ]
+    }
+   ],
    "source": [
     "#todo: \n",
-    "\n"
+    "array_pares = np.arange(0, 20, 2) #Crea un array de números pares entre 0 y 20 usando np.arange\n",
+    "print(\"\\nARRAY DE PARES ENTRE 0 Y 20\\n\")\n",
+    "print(array_pares)\n"
    ]
   }
  ],
