feat: crear array de 0 a 20 de pares y realizar las cuatro operaciones basicas a cada elemento

--- a/tp4.ipynb
+++ b/tp4.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "id": "f0c02872",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,25 @@
       "\n",
       "ARRAY DE PARES ENTRE 0 Y 20\n",
       "\n",
-      "[ 0  2  4  6  8 10 12 14 16 18]\n"
+      "[ 0  2  4  6  8 10 12 14 16 18]\n",
+      "\n",
+      "NUMERO ALEATORIO: 10\n",
+      "\n",
+      "SUMA DEL NÚMERO ALEATORIO A CADA ELEMENTO DEL ARRAY DE PARES\n",
+      "\n",
+      "[10 12 14 16 18 20 22 24 26 28]\n",
+      "\n",
+      "RESTA DEL NÚMERO ALEATORIO A CADA ELEMENTO DEL ARRAY DE PARES\n",
+      "\n",
+      "[-10  -8  -6  -4  -2   0   2   4   6   8]\n",
+      "\n",
+      "MULTIPLICACIÓN DEL NÚMERO ALEATORIO A CADA ELEMENTO DEL ARRAY DE PARES\n",
+      "\n",
+      "[  0  20  40  60  80 100 120 140 160 180]\n",
+      "\n",
+      "DIVISIÓN DEL NÚMERO ALEATORIO A CADA ELEMENTO DEL ARRAY DE PARES\n",
+      "\n",
+      "[0.  0.2 0.4 0.6 0.8 1.  1.2 1.4 1.6 1.8]\n"
      ]
     }
    ],
@@ -259,7 +277,26 @@
     "#todo: \n",
     "array_pares = np.arange(0, 20, 2) #Crea un array de números pares entre 0 y 20 usando np.arange\n",
     "print(\"\\nARRAY DE PARES ENTRE 0 Y 20\\n\")\n",
-    "print(array_pares)\n"
+    "print(array_pares)\n",
+    "\n",
+    "random_num = randint(1, 10) #Genera un número aleatorio entre 1 y 10\n",
+    "print(f\"\\nNUMERO ALEATORIO: {random_num}\\n\")\n",
+    "\n",
+    "array_pares_suma = array_pares + random_num #Suma el número aleatorio a cada elemento del array de pares\n",
+    "print(\"SUMA DEL NÚMERO ALEATORIO A CADA ELEMENTO DEL ARRAY DE PARES\\n\")\n",
+    "print(array_pares_suma) #Imprime el array resultante\n",
+    "\n",
+    "array_pares_resta = array_pares - random_num #Resta el número aleatorio a cada elemento del array de pares\n",
+    "print(\"\\nRESTA DEL NÚMERO ALEATORIO A CADA ELEMENTO DEL ARRAY DE PARES\\n\")\n",
+    "print(array_pares_resta) #Imprime el array resultante\n",
+    "\n",
+    "array_pares_multiplicacion = array_pares * random_num #Multiplica cada elemento del array de pares por el número aleatorio\n",
+    "print(\"\\nMULTIPLICACIÓN DEL NÚMERO ALEATORIO A CADA ELEMENTO DEL ARRAY DE PARES\\n\")\n",
+    "print(array_pares_multiplicacion) #Imprime el array resultante\n",
+    "\n",
+    "array_pares_division = array_pares / random_num #Divide cada elemento del array de pares por el número aleatorio\n",
+    "print(\"\\nDIVISIÓN DEL NÚMERO ALEATORIO A CADA ELEMENTO DEL ARRAY DE PARES\\n\")\n",
+    "print(array_pares_division) #Imprime el array resultante\n"
    ]
   }
  ],
